fix: search function alignment

--- a/02_products.css
+++ b/02_products.css
@@ -65,7 +65,7 @@ header {
 
   .products-search {
     width: 92%;
-    /* clac不起作用 */
+    /* 無作用 */
     /* width: calc(100% - ((80% -(80% * 90%)))); */
   }
 
@@ -83,7 +83,8 @@ header {
   }
 
   ul {
-    padding: 10px;
+    padding: 0;
+    padding-right: 10px;
     margin: 0;
   }
 
